feat(registry-backend): add complete installation route
