# packages/libs/registry-sdk/src/lib/schemas/completeInstallation.ts
@@ -1,0 +1,22 @@
+import { z } from './openApiZod';
+
+export const completeInstallationRequest = z
+  .object({
+    typedDataSignature: z.string().openapi({
+      description: 'The signature of the typed data from the user wallet',
+      example: '0x...',
+    }),
+    appInstallationDataToSign: z.object({}).passthrough().openapi({
+      description: 'The appInstallationDataToSign object returned from install-app',
+    }),
+  })
+  .strict();
+
+export const completeInstallationResponse = z
+  .object({
+    transactionHash: z.string().openapi({
+      description: 'The transaction hash of the completed installation',
+      example: '0x9d260d1bbe075be0cda52a3271df062748f3182ede91b3aae5cd115f7b26552b',
+    }),
+  })
+  .strict();
